Lambare niko imitãmi guive rasaite ohaise mombe’urã iporãvéva ko arapýpe. Chupe hi’ãite oiko maymave yvypóra jurúpe. Hákatu, mamóma piko ha’e ndoikuaái mba’éichapa omoñepyrũta upe mombe’urã ndojehaíriva gueteri araka’eve.
Omoñe’ẽ rire heta haihára rembiapokue, umi tapicha ohaiporãvéva rembihaipy, oñembopy’aguasu ohai haḡua  imombe’urã, áḡa ojerovia porãma rire ijehe, ojupi peteĩ yvyty  ipititi jajaipávape.Hu’ãitépema rire, oguapy peteĩ ita hũ ári ha upépe opyta oñamindu’u ha oñamindu’u.
Hetaite ojepy’amongeta rire pyhare pukukue, ára jepysokue… oguenohẽ ivokógui peteĩ rrelo ojoguanungáva umi monéda ymaguarépe, ojesareko rire mba’e órapa, ohecha sapy’a ita hũ ári peteĩ váso hesakã asýva ha upe mba’yru ruguaitépe ojajái peteĩ y omimbipáva ha omañávo hyepýpe, ohecha kaitujami rova peteĩ.
Hetaite ára rire, ou sapy’a iñakãme mba’eichaguápa upe mombe’urã ymaite guivéma ohaiséva.Tuicha ipy’ajera ha hesapipi ohechakuaávo huguáiguima oguerekoha hembipota ymaite guare.
Ikatu porãnte oimera’e Lambare akãme ojerokypáma umi ñe’ẽ iporãnguete, oikuaáma mamo ahēpa ha araka’e nipo oikóta omba’embe’uséva, mávapa  iñañáta ha máva añápa ipy’aporãta... hamba’e.
Omboguapýtamavo kuatiápe mombe’urã– iporãvéva ko yvórape - opa’ãjey Lambare, ipahápe ndoikuaái mamóguipa omoñepyrũta, mba’eichaitépa ombohysýita ohóvo ha mba’éichapa omohu’ãta.
Heta jasy ra’ýma ou ha oho ha Lambare oguapyjeýma oñakangeta jepiverõguáicha. Upeichaháguinte, upe ita hũ guýpe ohendu vaicha oguilili ha opuraheipáramo ysyry ha vaichánte chupe ohechahe- chapáva yvy ha yvága, opáichagua pira, ka’aguy rovyũ nahu’ãiva, ysyry mboypýri oñombojarúramo panambi ha yvotyeta hyakuãvureíva, ñemo’ã guyrakuéra opuraheipa ha kuarahy rendy ojajaipáva, jámakatu  yvytu  resãi oipejúramo ha hembypáva hi’upyrã…
Upe tenda Lambare ohohaguépe oñami- ndu’u niko, oñepyrũ ojehechauka sa’isa’ípe opaichagua tapicha, amo ipahápe naha’e- ñovéima ha jepe mayma ohasáva upé- rupi omomaitei rory chupe, ha’e katu ndohechái ni nohendúi gua’u avavépe.
Ita hũ ári itáicha ha’e opyta, upépe oñehañykãjoko mokõivéva ikuã guasúpe ha  umi ambue ikuã katu ombojuasa, ojehecha mba’éichapa omaña mombyry ha ivigóte apýra ha hi’áva vukuete oñemyatymói yvytúre.
Upeichaháguinte ojejurupe’a topehýigui ha upévo osẽ ijurúgui peteĩ panambi ovevéva kuarahy resẽvo.Kaitujami opukavy, vaichánte rehe upéva ohovasaporãta ichupe ha iñapytu’ũme ombojeroky jeýma mba’eporãita.Vokoikemínte, ha heñóitama peteĩ mombe’urã ndahuvicháiva ko arapýpe.
-	Nápy nde tandero’y ha che tatarara - he’i-, ha ojepokyty kyty.
Michĩra’ytomi ha opytátama maymave yvypóra apytu’ũme ko mitã-tuja haihára, ombohokypujeráma rehe ohóvo peteĩ mombe’urã ndahuvicháiva ha noñehendúiva gueteri mamovete ni araka’eve.
-Kóva ha’erãma. Ko’áḡa ae amanóramo jepe namanovéima -he’i- ha ojejyvapysóvo oguenohẽ ivokógui hembiporu ha oñemopyrenda oñemopyrendaháicha umi artista ohai haḡua ita hũre upe iñapytu’ũ roky porãite.
Upe javete, añarã pe añamemby, Lambare iñatĩa ha ihu’u peteĩteĩ, mokõi mokõi... nda’ihu’upakuaavéi.Ikatuporãnte – oñehendu oje’érõ upérupi- upe tapicha poriahúpe oimera’e oipytỹ upe mombe’urã rykuere iporãvéva ko arapýpe. Upévarengo oiméne ra’e ko tapichami ihu’u arakuépe   ha pyharépe. Ihu’úrõko ihu’uve, ihu’uve ha ihu’uve ha nda’ihupakuaavéi.
Lambare oumi ihu’u hekove rembyre pukukue, ihu’u omanoite peve ha omano rire. Umi tapicha ikuaaha oñembyasy kakuaaite, hákatu ndaha’eivoi katuete upe chupe ombyasy rehe, ỹramo upe mombe’urã iporãvéva ko arapýpe naheñói jepéi rehe.
Ñe’ẽporãita hokyjérama va’ekue hína kuri Lambare apytu’ũme, nda’ihu’upakuaavéi. Mombe’urã iporãvéva  ko arapýpe haimetemi heñói peteī ita hũ ári.
maurolugo  heñói  1979-pe, ñe’ēpapára ha haihára paraguái, omoherakuã mombe'urã mitãme ğuarã hérava "Mbarakaja pytã, Mbarakaja morotī, Mbarakaja hovy, Guyrami oñe'ēva”, ha ambueve. Ohai avei tembihechapy ha ñoha'ãnga. Omoguarani heta haipyre guasu arapypegua "Las mil y una noches,  La  metamorfosis, El  principito, Don  Quijote de  la  Mancha”  ha ambueve.
